# PanelView

./: .editorconfig  .gitignore  .gitmodules  Build.bat  Build.ps1  CMakeLists.txt  LICENSE.md  README.md  TODO.md
.github/ISSUE_TEMPLATE/: BugReport.md  FeatureRequest.md
src/: BveAtsPlugin.c  BveAtsPlugin.h  CMakeLists.txt  EntryPoint.cpp  atsplugin.h
src/Pv/: CMakeLists.txt  PvAtomicFlag.hpp  PvBridgingDefinitions.h  PvBridgingUtils.hpp  PvEnvironmentInformationPublisher.cpp  PvEnvironmentInformationPublisher.hpp  PvEnvironmentInformationSubject.cpp  PvEnvironmentInformationSubject.hpp  PvEnvironmentInformationSubscriberBase.cpp  PvEnvironmentInformationSubscriberBase.hpp  PvGr_D3D9.cpp  PvGr_D3D9.hpp  PvInstrumentPanelComponentBase.cpp  PvInstrumentPanelComponentBase.hpp  PvInstrumentPanelComponent_CircularMeterObjectBase.hpp  PvInstrumentPanelComponent_DigitalGauge.cpp  PvInstrumentPanelComponent_DigitalGauge.hpp  PvInstrumentPanelComponent_DigitalNumber.cpp  PvInstrumentPanelComponent_DigitalNumber.hpp  PvInstrumentPanelComponent_Needle.cpp  PvInstrumentPanelComponent_Needle.hpp  PvInstrumentPanelComponent_ParametricObjectBase.hpp  PvInstrumentPanelComponent_PilotLamp.cpp  PvInstrumentPanelComponent_PilotLamp.hpp  PvInstrumentPanelComponent_TextureMappingObjectBase.hpp  PvInstrumentPanelComponent_This.cpp  PvInstrumentPanelComponent_This.hpp  PvInstrumentPanelDefinitions.hpp  PvInstrumentPanelDocument.cpp  PvInstrumentPanelDocument.hpp  PvInstrumentPanelDocumentDataNode.hpp  PvInstrumentPanelGenerator.cpp  PvInstrumentPanelGenerator.hpp  PvInstrumentPanelObject.cpp  PvInstrumentPanelObject.hpp  PvLogHandler.cpp  PvLogHandler.hpp  PvLogHandlerParser.cpp  PvLogHandlerParser.hpp  PvMain.cpp  (+18 more)
testing/: CMakeLists.txt  PvInstrumentPanelDocumentDataNodeTests.cpp  PvInstrumentPanelDocumentTests.cpp  PvPfCccTests.cpp  PvPfTests.cpp  PvSettingsTests.cpp  PvStringUtilsTests.cpp  PvTestMain.cpp  PvTestMain.hpp
testing/data/: out_test.txt  panel_gb2312_crlf.txt  panel_sjis_crlf.txt  panel_sjis_crlf_signature_utf8.txt  panel_utf16_crlf.txt  panel_utf16_crlf_signature_default.txt  panel_utf16_crlf_signature_sjis.txt  panel_utf16_crlf_signature_utf8.txt  panel_utf16_crlf_signature_v1.txt  panel_utf16be_crlf.txt  panel_utf16be_crlf_signature_sjis.txt  panel_utf16be_lf.txt  panel_utf32_crlf.txt  panel_utf32be_crlf.txt  panel_utf8_bom_lf.txt  panel_utf8_bom_lf_correct.txt  panel_utf8_crlf.txt  panel_utf8_crlf_signature_sjis.txt  panel_utf8_crlf_signature_v1.txt  panelview.toml  utf8_crlf.txt  シフトジス.txt  信息交换用汉字编码字符集・基本集.txt
testing/data/TestPanel1/: settings.toml
